--- a/resources/assets/sass/base.scss
+++ b/resources/assets/sass/base.scss
@@ -226,8 +226,65 @@ body {
       .header {
         background: #454545;
         margin: -20px -20px 0;
-        padding: 20px;
+        padding: 20px 50px;
         color: #FFF;
+        font-size: 24px;
+        line-height: 50px;
+        color: #FFF;
+      }
+      .content {
+        .group {
+          width: calc(100% / 3);
+          float: left;
+          padding: 20px 30px 0;
+          label {
+            margin-left: 10px;
+            margin-bottom: 15px;
+            float: left;
+            width: 100%;
+          }
+          > b {
+            width: 100%;
+            border: 2px solid #454545;
+            background: #999;
+            color: #454545;
+            font-size: 20px;
+            border-radius: 15px;
+            padding: 10px;
+            display: inline-block;
+            min-height: 47px;
+            float: left;
+            &.een-3 {
+              float: left;
+              width: 30%;
+            }
+            &.twee-3 {
+              float: left;
+              width: 70%;
+              .right {
+                float: right;
+              }
+            }
+          }
+          .btn {
+            &.btn-warning {
+              background: red;
+              color: #FFF;
+              border: 2px solid red;
+              border-radius: 15px;
+              padding: 10px;
+              width: 100%;
+              text-align: left;
+              cursor: pointer;
+              &:hover {
+                background: lighten(red, 10%);
+              }
+            }
+          }
+          &.full-width {
+            width: 100%;
+          }
+        }
       }
       padding: 20px;
     }
@@ -263,7 +320,7 @@ body {
         float: left;
         width: 100%;
         background: #454545;
-        padding: 20px;
+        padding: 20px 40px;
         font-size: 24px;
         line-height: 50px;
         color: #FFF;
